bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: illegal start of simple expression
else if (a==B);
              ^BDR:9: error: ';' expected but 'else' found.
else if (a==C);
^BDR:13: error: ';' expected but 'else' found.
else if (a==R);
^BDR:16: error: ';' expected but 'else' found.
else if (a==L);
^BDR:19: error: ';' expected but 'else' found.
else if (a==I);
^BDR:23: error: ';' expected but 'else' found.
else if (a==Z);
^BDR:25: error: ';' expected but 'else' found.
else if(a==Y);
^BDR:28: error: ';' expected but 'else' found.
else if (a==X);
^